--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,10 @@
 .swiper-button-next {
     display: none;
 }
+
+.bgHeader {
+    background-image: url('@/assets/header_bg4.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
