--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,9 @@
     display: none;
 }
 
-.bgHeader {
+/* .bgHeader {
     background-image: url('@/assets/header_bg4.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-}
+} */
